[RLS] Ensure that iframes graphics layers are attached.

This patch ensures that if we remove a child frame's graphics layer from
its parent, that we reattach its (possibly new) root graphics layer back
to the parent it had before.

The parent does not change during this, because we're in a stack
processing the child frame, and the parent would reference the parent
frame that is currently paused.

This mimics pre-RLS code path where the child frame always had a parent
accessible directly from the compositor (ie root_content_layer_), except
here we save off whatever we were attached to already.

R=chrishtr@chromium.org, skobes@chromium.org, pdr@chromium.org

Bug: 815121
Cq-Include-Trybots: master.tryserver.blink:linux_trusty_blink_rel;master.tryserver.chromium.linux:linux_layout_tests_slimming_paint_v2
Change-Id: I9e63d2d513df24eaa13a30ee36582b5c807f4aff
Reviewed-on: https://chromium-review.googlesource.com/946566
Commit-Queue: vmpstr <vmpstr@chromium.org>
Reviewed-by: Steve Kobes <skobes@chromium.org>
Reviewed-by: Chris Harrelson <chrishtr@chromium.org>
Cr-Commit-Position: refs/heads/master@{#540692}
Former-commit-id: 93b15c2c0cfeea861d3f64af9ab9dab670060925